--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 # Create a .env file in your project root and copy this variable {MONGO_URI} and assign it your own mongo db cluster urI
-MONGO_URI=
+MONGO_URI='mongodb+srv://amaka:g8NewcYFNoJLNJ6X@cluster0.p9oyhbc.mongodb.net/?retryWrites=true&w=majority'
